--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Users CR</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Add User</h1>
+        <form action="/create_user" method="POST">
+            <!-- hidden input for created_at -->
+            <input class="form-control" type="hidden" name="created_at" value="NOW()">
+            <label class="form-label" for="fname">First Name</label>
+            <input class="form-control" type="text" name="fname">
+            <label class="form-label" for="lname">Last Name</label>
+            <input class="form-control" type="text" name="lname">
+            <label class="form-label" for="email" >Email</label>
+            <input class="form-control" type="text" name="email">
+            <input class="btn btn-success form-control mt-3" type="submit" value="Add Friend">
+        </form>
+    </div>
 </body>
 </html>
