--- a/templates/users_table.html
+++ b/templates/users_table.html
@@ -9,7 +9,8 @@
     <title>Users Table</title>
 </head>
 <body>
-    <div class="container" style="max-width: 55vw;">
+    <div class="container p3 mt-5" style="max-width: 55vw;">
+        <h1>Users in our database</h1>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -28,8 +29,9 @@
                     <td>{{one_user.created_at}}</td>
                 </tr>
                 {% endfor %}
-            </tbod>
-        </table>
+            </table>
+        </tbody>
+        <p class="d-flex justify-content-center align-items-center"><a class="btn btn-primary" href="/">Add User</a></p>
     </div>
 </body>
 </html>
