--- a/templates/user_new.html
+++ b/templates/user_new.html
@@ -11,7 +11,7 @@
 <body>
     <div class="d-flex flex-column justify-content-center align-items-center container bg-light p-3 mt-5" style="max-width: 55vw;">
         <h1>Add User</h1>
-        <form action="/create_user" method="POST">
+        <form action="/user/create" method="POST">
             <!-- hidden input for created_at -->
             <input class="form-control" type="hidden" name="created_at" value="NOW()">
             <label class="form-label" for="fname">First Name</label>
