--- a/templates/users.html
+++ b/templates/users.html
@@ -18,15 +18,21 @@
                     <th>Last Name</th>
                     <th>Email</th>
                     <th>Created At</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-                {% for one_user in all_users %}
+                {% for user in users %}
                 <tr>
-                    <td>{{one_user.first_name}}</td>
-                    <td>{{one_user.last_name}}</td>
-                    <td>{{one_user.email}}</td>
-                    <td>{{one_user.created_at}}</td>
+                    <td>{{user.first_name}}</td>
+                    <td>{{user.last_name}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.created_at}}</td>
+                    <td>
+                        <a href="/user/show/{{user.id}}">Show</a>
+                        <a href="{{user.id}}">Edit</a>
+                        <a href="{{user.id}}">Delete</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </table>
