--- a/templates/show_user.html
+++ b/templates/show_user.html
@@ -17,7 +17,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Email</th>
-                    <th>Created At</th>
+                    <th>Last Updated</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -26,11 +26,11 @@
                     <td>{{user.first_name}}</td>
                     <td>{{user.last_name}}</td>
                     <td>{{user.email}}</td>
-                    <td>{{user.created_at}}</td>
+                    <td>{{user.updated_at}}</td>
                     <td>
                         <a class="me-2" href="/user/show/{{user.id}}">Show</a>
-                        <a class="me-2" href="{{user.id}}">Edit</a>
-                        <a class="me-2" href="{{user.id}}">Delete</a>
+                        <a class="me-2" href="/user/edit/{{user.id}}">Edit</a>
+                        <a class="me-2 btn btn-danger" href="/user/delete/{{user.id}}">Delete</a>
                     </td>
                 </tr>
             </table>
