--- a/flask_app/templates/user_new.html
+++ b/flask_app/templates/user_new.html
@@ -11,13 +11,26 @@
 <body>
     <div class="d-flex flex-column justify-content-center align-items-center container bg-light p-3 mt-5" style="max-width: 55vw;">
         <h1>Add User</h1>
+        
+        {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        <div class="container-sm col-5 mt-3 mb-4">
+            <ul class="flashes list-group">
+                {% for category, message in messages %}
+                <li class="{{ category }} list-group-item list-group-item-danger"> {{ message }} </li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+        {% endwith %}
+
         <form action="/user/create" method="POST">
             <!-- hidden input for created_at -->
             <input class="form-control" type="hidden" name="created_at" value="NOW()">
-            <label class="form-label" for="fname">First Name</label>
-            <input class="form-control" type="text" name="fname">
+            <label class="form-label" for="first_name">First Name</label>
+            <input class="form-control" type="text" name="first_name">
             <label class="form-label" for="lname">Last Name</label>
-            <input class="form-control" type="text" name="lname">
+            <input class="form-control" type="text" name="last_name">
             <label class="form-label" for="email" >Email</label>
             <input class="form-control" type="text" name="email">
             <input class="btn btn-success form-control mt-3" type="submit" value="Add User">
